fix css jumping header

--- a/my-finance-app/src/app/components/field-cost-item/field-cost-item.component.css
+++ b/my-finance-app/src/app/components/field-cost-item/field-cost-item.component.css
@@ -10,7 +10,7 @@
   width: 320px;
   height: 20px;
   border: 1px solid black;
-  background-color: #fff;
+  background-color: #ececec;
 }
 
 .progress-bar__fill-value {
