--- a/my-finance-app/src/app/components/main-page/main-page/main-page.component.css
+++ b/my-finance-app/src/app/components/main-page/main-page/main-page.component.css
@@ -1,8 +1,4 @@
 .main {
-  position: fixed;
-  left: 0;
-  right: 0;
-  z-index: -1;
   display: flex;
   justify-content: flex-start;
   align-items: center;
@@ -10,7 +6,6 @@
   margin: auto;
   min-height: 100%;
   font-family: 'open sans', sans-serif;
-  background-color: #efefef;
   padding: 5px;
   box-sizing: border-box;
 }
